Bug#26241   "Blackhole tables don't honor table locks"   Implement neccessary shared lock structure for table locks.   Imported test case created by Giuseppe Maxia